@@ -1,2 +1,2 @@
-export MAVEN_OPTS="-Xms256m -Xmx1024m -XX:MaxPermSize=128m"
+# export MAVEN_OPTS="-XX:PermSize=512m -XX:MaxPermSize=1024m -Xms2048m -Xmx3076m"
 mvn -DskipTests=true clean package
